--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,17 @@
 .p-button-text:hover .pi {
   filter: brightness(2);
 }
+.custom-menu .p-menuitem-link {
+  @apply flex  items-center gap-2 px-4 py-2;
+}
+
+.custom-menu .p-menuitem-link:hover {
+  @apply bg-secondary-350  !text-main-550;
+}
+.custom-menu .p-submenu-header {
+  @apply border-b border-secondary-200 bg-transparent;
+}
+
+.custom-menu .p-menu-separator {
+  @apply border-y border-secondary-200 bg-transparent;
+}
