Category tags added. #11

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,8 @@
   outline: none;
   box-shadow: none;
 }
+
+.p-tabmenu-nav {
+  background-color: transparent !important;
+  border: none !important;
+}
