--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,7 @@
   outline: none;
   box-shadow: none;
 }
+
+.header-buttons {
+  @apply flex-shrink-0 items-center h-6 w-6 text-xl md:text-2xl text-main-250 hover:text-main-550 transition ease-in-out duration-300;
+}
